# GoLdr

./: .gitignore  go.mod  main.go
pack/: dll.go  exe.go  options.go  shellcode.go
packer/: builder.go
stubs/PE/: CMakeLists.txt
stubs/PE/include/: PE.hpp
stubs/PE/include/core/: CascadeInject.hpp  CtAes.h  Macros.hpp  Util.hpp
stubs/PE/source/: PE.cpp
stubs/PE/source/core/: CascadeInject.cpp  CtAes.c  Util.cpp
stubs/PE/source/main/: MainExe.cpp
util/: util.go
